# aiida-agents

./: .copier-answers.yml  .env.example  .gitattributes  .gitignore  .mdformat.toml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.py
dev/: setup_test_profile.py  test_rag.py  update_changelog.py
docs/: index.md  myst.yml
docs/adr/: 01-package-scaffolding.md  02-mcp-tools-wrap-aiida-restapi.md  03-llm-library.md  04-multi-agent-architecture.md  05-rag-over-aiida-docs.md  06-eval-harness.md  07-validator.md  08-human-in-the-loop-before-writes.md  README.md
docs/gsoc/: project-timeline.md
docs/gsoc/meetings/: 2026-05-22.md
src/aiida_agents/: __about__.py  __init__.py  _settings.py  agent.py  cli.py
src/aiida_agents/agents/: __init__.py  _errors.py  _models.py
src/aiida_agents/agents/analysis/: __init__.py  prompt.md
src/aiida_agents/agents/diagnostic/: __init__.py  prompt.md
src/aiida_agents/agents/validator/: __init__.py  _ranges.py  _schema.py
src/aiida_agents/mcp/: __init__.py  _errors.py  _orm.py  _types.py  server.py
src/aiida_agents/mcp/tools/: __init__.py  nodes.py  processes.py  structures.py  submit.py
src/aiida_agents/prompts/: __init__.py  system_prompt.py
src/aiida_agents/rag/: __init__.py  chunking.py  embeddings.py  indexing.py  retriever.py  store.py
src/aiida_agents/tools/: __init__.py  _errors.py  _orm.py  _types.py  nodes.py  processes.py  structures.py  submit.py
tests/: conftest.py  test_agent.py  test_cli.py  test_eval_harness.py  test_mcp_tools.py  test_settings.py
tests/agents/: test_errors.py  test_models.py
tests/agents/analysis/: test_agent.py  test_analysis.py
tests/agents/diagnostic/: test_diagnostic.py
tests/mcp/: test_errors.py  test_server.py
tests/mcp/tools/: test_nodes.py  test_processes.py  test_structures.py  test_submit.py
tests/prompts/: test_system_prompt.py
tests/rag/: test_chunking.py  test_embeddings.py  test_indexing.py  test_retriever.py  test_search_tool.py  test_store.py
tests/tools/: test_errors.py  test_nodes.py  test_processes.py  test_structures.py  test_submit.py
tests/validator/: test_hitl.py  test_validator.py
