[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiida-agents"
dynamic = ["version"]
description = 'Natural-language, multi-agent interface to AiiDA (alpha, work in progress).'
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["aiida", "agents", "llm", "mcp", "rag", "workflows", "natural-language"]
authors = [{ name = "Jaweria Batool" }, { name = "The AiiDA Team" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiida-core @ git+https://github.com/aiidateam/aiida-core.git",
    "aiida-restapi @ git+https://github.com/edan-bainglass/aiida-restapi@deps",
    "fastmcp>=3.0.0",
    "pydantic-ai-slim[openai,anthropic]>=0.1",
    "python-dotenv>=1.0",
    "typing-extensions>=4.12",
    "uvicorn>=0.33",
]

[project.scripts]
aiida-agents = "aiida_agents.cli:main"

[project.optional-dependencies]
docs = [
  "mystmd"
]
tests = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio"
]
lint = [
  "mypy",
  "ruff"
]
pre-commit = [
  "pre-commit",
  "aiida-agents[lint]"
]

[dependency-groups]
dev = [
  "aiida-agents[docs,tests,pre-commit]"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/aiida_agents/__about__.py"

[tool.hatch.envs.default]
installer = 'uv'
scripts.bump = [
  "hatch version {args}",
  "python dev/update_changelog.py",
]

[tool.hatch.envs.docs]
features = ["docs"]
scripts.build = "cd docs && myst build"
scripts.serve = "cd docs && myst start"

[tool.hatch.envs.pre-commit]
# `tests` is included so the mypy hook (which now type-checks `tests/`) has
# pytest and the test deps available.
features = ["pre-commit", "tests"]
scripts.install = "pre-commit install"
scripts.run = "pre-commit run {args}"

[tool.hatch.envs.hatch-test]
features = ["tests"]
randomize = false
parallel = false

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.coverage.run]
source = ["aiida_agents"]
branch = true

[tool.coverage.report]
show_missing = true
# Floor only. The deterministic, safety-critical core (validator, HITL, query
# construction) targets ~100%; LLM/agent IO boundaries use `# pragma: no cover`
# and are validated by the eval harness, not by mock-to-hit-lines tests.
fail_under = 80

[tool.ruff]
lint.ignore = [
    "TRY003",  # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
    "EM101",   # https://docs.astral.sh/ruff/rules/raw-string-in-exception/
    "EM102",   # https://docs.astral.sh/ruff/rules/f-string-in-exception/
    "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison/
    "FBT002",  # https://docs.astral.sh/ruff/rules/boolean-default-value-positional-argument/
    "TID252",  # https://docs.astral.sh/ruff/rules/relative-imports/
]
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["INP001", "S101"]
"dev/**/*.py" = ["INP001", "T201"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
strict = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
# AiiDA's ORM is only partially typed (``orm.Int()``, ``append_atom()``, ...),
# so strict mypy flags every ORM call in the tests as ``no-untyped-call``. That
# is AiiDA's gap, not ours, and a per-call ``# type: ignore`` is unsustainable.
# Disable just that check for the tests; everything else stays strict.
module = "tests.*"
disallow_untyped_calls = false

[tool.basedpyright]
# Not run in CI (mypy is the type checker); this just keeps local basedpyright
# (e.g. in-editor) aligned with the mypy baseline. Its default "recommended"
# mode floods on `Any` from AiiDA's untyped ORM, which mypy does not flag.
typeCheckingMode = "standard"

[tool.pytest.ini_options]
# Warnings raised by our own code are errors; third-party warnings only show.
# A blanket `error` is unworkable here: AiiDA's dependency tree emits
# version-specific deprecations across the 3.10-3.14 matrix (aiida-core itself
# curates ~30 ignores and never errors), so scoping `error` to our package
# avoids that treadmill while still failing on warnings we introduce. The
# ignores below just quiet the loudest known third-party noise.
filterwarnings = [
    "error:::aiida_agents",
    "ignore::ResourceWarning",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore:Creating AiiDA configuration folder:UserWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

